[package]
name = "UserClone-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg="*"
windows = { version = "*", features = [ "Win32_Foundation","Win32_System_Registry"] }

[profile.release]
panic = 'abort'
